--- a/Platform.Comparers.csproj
+++ b/Platform.Comparers.csproj
@@ -11,7 +11,7 @@
     <PackageId>Platform.Comparers</PackageId>
     <PackageTags>LinksPlatform;Comparers;Comparer</PackageTags>
     <PackageIconUrl>https://raw.githubusercontent.com/linksplatform/Documentation/18469f4d033ee9a5b7b84caab9c585acab2ac519/doc/Avatar-rainbow-icon-64x64.png</PackageIconUrl>
-    <PackageProjectUrl>https://github.com/linksplatform/Comparers</PackageProjectUrl>
+    <PackageProjectUrl>https://linksplatform.github.io/Comparers</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <RepositoryType>git</RepositoryType>
