--- a/Platform.Comparers.csproj
+++ b/Platform.Comparers.csproj
@@ -6,7 +6,8 @@
     <AssemblyTitle>Platform.Comparers</AssemblyTitle>
     <VersionPrefix>0.0.3</VersionPrefix>
     <Authors>Konstantin Diachenko</Authors>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">netstandard2.0;net461</TargetFrameworks>
+    <TargetFramework Condition="'$(OS)' != 'Windows_NT'">netcoreapp2.0</TargetFramework>
     <AssemblyName>Platform.Comparers</AssemblyName>
     <PackageId>Platform.Comparers</PackageId>
     <PackageTags>LinksPlatform;Comparers;Comparer</PackageTags>
