--- a/csharp/Platform.Comparers/Platform.Comparers.csproj
+++ b/csharp/Platform.Comparers/Platform.Comparers.csproj
@@ -27,6 +27,7 @@
     <PackageReleaseNotes>Lowest supported version of .NET Framework is now 4.7.2.
 Issues fix.
 Tests added.</PackageReleaseNotes>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup Condition="$(TargetFramework.StartsWith('net4')) AND '$(MSBuildRuntimeType)' == 'Core' AND '$(OS)' != 'Windows_NT'">
