--- a/csharp/Platform.Comparers/Platform.Comparers.csproj
+++ b/csharp/Platform.Comparers/Platform.Comparers.csproj
@@ -6,7 +6,7 @@
     <AssemblyTitle>Platform.Comparers</AssemblyTitle>
     <VersionPrefix>0.1.0</VersionPrefix>
     <Authors>Konstantin Diachenko</Authors>
-    <TargetFrameworks>net472;netstandard2.0;netstandard2.1;net5;net6</TargetFrameworks>
+    <TargetFramework>net7</TargetFramework>
     <AssemblyName>Platform.Comparers</AssemblyName>
     <PackageId>Platform.Comparers</PackageId>
     <PackageTags>LinksPlatform;Comparers;Comparer</PackageTags>
