--- a/csharp/Platform.Comparers/Platform.Comparers.csproj
+++ b/csharp/Platform.Comparers/Platform.Comparers.csproj
@@ -6,7 +6,7 @@
     <AssemblyTitle>Platform.Comparers</AssemblyTitle>
     <VersionPrefix>0.1.0</VersionPrefix>
     <Authors>Konstantin Diachenko</Authors>
-    <TargetFramework>net7</TargetFramework>
+    <TargetFramework>net8</TargetFramework>
     <AssemblyName>Platform.Comparers</AssemblyName>
     <PackageId>Platform.Comparers</PackageId>
     <PackageTags>LinksPlatform;Comparers;Comparer</PackageTags>
@@ -23,9 +23,7 @@
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <LangVersion>latest</LangVersion>
-    <PackageReleaseNotes>Lowest supported version of .NET Framework is now 4.7.2.
-Issues fix.
-Tests added.</PackageReleaseNotes>
+    <PackageReleaseNotes>Target framework is updated to net8.</PackageReleaseNotes>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
